# autocontext

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md
autocontext/: README.md  pyproject.toml  smoke_test.py
autocontext/.claude/skills/: grid-ctf-ops  othello-ops
autocontext/assets/: banner.txt  whats_new.txt
autocontext/dashboard/: index.html
autocontext/demo_data/: README.md
autocontext/docs/: agent-integration.md  agent-task-case-study.md  mlx-training.md  sandbox.md
autocontext/docs/experiments/: 2026-02-27-battle-test.md  2026-02-28-battle-test-round2.md
autocontext/migrations/: 001_initial.sql  002_phase3_phase7.sql  003_agent_subagent_metadata.sql  004_knowledge_inheritance.sql  005_ecosystem_provider_tracking.sql  006_human_feedback.sql  007_task_queue.sql  008_staged_validation.sql  010_session_notebook.sql  011_monitors.sql  012_research_hub.sql  015_match_replay.sql
autocontext/scripts/: check_no_python_postinstall.py  check_python_no_telemetry.py  check_python_offline_install.py  check_python_reproducible_wheel.py  drive_anthropic_parity_fixture.py  drive_parity_fixture.py
autocontext/skills/grid-ctf-ops/: SKILL.md  playbook.md
autocontext/src/autocontext/: __init__.py  banner.py  cli.py  cli_investigate.py  cli_queue.py  cli_runtime_overrides.py  cli_solve.py  concepts.py  preflight.py  sdk.py  sdk_models.py
autocontext/tests/: conftest.py  test_ab_runner.py  test_ab_stats.py  test_action_filter.py  test_action_filter_integration.py  test_action_labels.py  test_advancement_contract.py  test_agent_e2e.py  test_agent_live_e2e.py  test_agent_sdk_client.py  test_agent_sdk_integration.py  test_agent_task.py  test_agent_task_export.py  test_agent_task_multi_gen.py  test_agent_task_pipeline.py  test_aggregate_facets.py  test_analysis_injection.py  test_api_key_fallback.py  test_architect_dag_changes.py  test_architect_tool_updates.py  test_architect_tools.py  test_artifact_contracts.py  test_artifact_editing.py  test_artifact_harness.py  test_ast_safety.py  test_auto_sample_input.py  test_backpressure.py  test_backpressure_import_consistency.py  test_backpressure_trend.py  test_banner_sync.py  test_blob_store_phase2.py  test_bootstrap_snapshot.py  test_browser_chrome_cdp.py  test_browser_context_capture.py  test_browser_contract_fixtures.py  test_browser_discovery.py  test_browser_evidence.py  test_browser_factory.py  test_browser_policy.py  test_browser_runtime.py  (+289 more)
autocontext/tests/integrations/: test_shared_identity.py
autocontext/tests/test_harness/: test_harness_adapt_applicator.py  test_harness_adapt_types.py  test_harness_audit_types.py  test_harness_audit_writer.py  test_harness_controller.py  test_harness_cost_calculator.py  test_harness_cost_tracker.py  test_harness_cost_types.py  test_harness_elo.py  test_harness_eval_runner.py  test_harness_eval_types.py  test_harness_evaluator.py  test_harness_events.py  (+28 more)
(+2368 files in other folders)
