[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "autocontext"
version = "0.3.4"
description = "autocontext control plane for iterative strategy evolution."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["agents", "evaluation", "harness", "llm", "optimization", "autocontext"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "anthropic>=0.66.0",
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "prime-sandboxes>=0.2.14",
  "pydantic>=2.11.0",
  "pyyaml>=6.0.2",
  "rich>=13.9.4",
  "typer>=0.16.0",
  "uvicorn>=0.35.0",
  "websockets>=16.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
agent-sdk = ["claude-agent-sdk>=0.1.0"]
monty = ["pydantic-monty>=0.0.7"]
mlx = ["mlx>=0.30.0", "rustbpe>=0.1.0", "tiktoken>=0.11.0", "safetensors>=0.4.0"]
openai = ["openai>=1.0.0"]
all = ["autocontext[mcp,agent-sdk,monty,openai]"]

[dependency-groups]
dev = [
  "mypy>=1.16.0",
  "pytest>=8.4.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.12.0",
]

[project.scripts]
autoctx = "autocontext.cli:app"

[project.urls]
Homepage = "https://github.com/greyhaven-ai/autocontext"
Repository = "https://github.com/greyhaven-ai/autocontext"
Issues = "https://github.com/greyhaven-ai/autocontext/issues"
Documentation = "https://github.com/greyhaven-ai/autocontext/tree/main/autocontext/docs"

[tool.hatch.build]
exclude = [".claude", ".claude/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/autocontext"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --disable-warnings"
markers = [
    "monty: tests requiring pydantic-monty to be installed",
    "slow: tests that run a full generation loop or multi-generation pipeline",
    "integration: multi-component integration tests",
    "live: tests requiring external API keys or services",
    "mlx: tests requiring MLX to be installed",
]

[tool.ruff]
line-length = 130
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN204"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["ANN204"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
exclude = "(^tests/)|(^migrations/)"

[[tool.mypy.overrides]]
module = ["pydantic_monty", "mcp.*", "claude_agent_sdk", "mlx", "mlx.*", "rustbpe", "tiktoken", "safetensors", "safetensors.*", "numpy", "numpy.*"]
ignore_missing_imports = true
